--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-6'
+    compile 'org.seleniumhq.selenium:selenium-java:3.141.59'
 
 }
